--- a/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderStatusModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/updateOrderStatusModal.html
@@ -5,7 +5,8 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header" style="background-color: #003a6b">
-                    <h5 class="modal-title" id="exampleModalLabel" style="color: white">Cập Nhật Trạng Thái Đơn Hàng</h5>
+                	<h3 id="orderIdForUpdateStatus" style="color: white">ID của đơn hàng: <span id="orderIdUpdateStatus"></span></h3>
+                    <br><h5 class="modal-title" id="exampleModalLabel" style="color: white">Cập Nhật Trạng Thái Đơn Hàng</h5></br>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true" style="color: white" onclick="closeUpdateOrderStatusModal()">&times;</span>
                     </button>
@@ -14,11 +15,11 @@
                     <form id="updateOrderStatusForm">
                         <!-- Mã đơn hàng -->
                         <div class="form-group">
-                            <label for="orderId">Mã đơn hàng</label>
+                            <label for="orderCode">Mã đơn hàng</label>
                             <input type="text" class="form-control" id="orderCodeUpdateStatus" placeholder="Hiển thị mã đơn hàng" required readonly="readonly">
                         </div>
                         <div class="form-group">
-                            <label for="orderId">Loại đơn hàng</label>
+                            <label for="orderCate">Loại đơn hàng</label>
                             <select class="form-control" id="orderCategoryUpdateStatus" style="background-color: white; color: black;" readonly="readonly"></select>
                         </div>
                         <!-- Trạng thái đơn hàng -->
@@ -31,7 +32,7 @@
                     </form>
                 </div>
                 <div class="modal-footer row4">
-                    <button type="button" id="">Cập nhật</button>
+                    <button type="button" id="saveOrderStatusButton">Cập nhật</button>
 	        		<button type="button" onclick="closeUpdateOrderStatusModal()">Đóng</button>
                 </div>
             </div>
