--- a/web/src/main/webapp/WEB-INF/templates/addCustomer_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer_v2.html
@@ -46,7 +46,7 @@
 		}
 		
 		function goBack() {
-	        window.location.href = '/crm-web/customer-list';
+	        window.location.href = '/crm-web/customer/list';
 	    }
 	</script>
 </body>
