sửa thuộc tính list<profession>

--- a/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
@@ -37,7 +37,7 @@
 		    <div class="modal-content">
 		    <form action="/crm-web/customer-list-search-son" method="get">
 		      <div class="modal-header">
-		        <h1 class="modal-title fs-5" id="staticBackdropLabel">Advanced Search</h1>
+		        <h1 class="modal-title fs-5" id="staticBackdropLabel">Tìm kiếm nâng cao</h1>
 		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		      </div>
 		      <div class="modal-body w-100">
