--- a/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
@@ -15,8 +15,38 @@
 <link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
 <link rel="stylesheet" type="text/css" href="resources/css/status.css">
 <link rel="stylesheet" type="text/css" href="resources/css/buttonGroupFunction.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<style>
+    /* CSS cho nút hình tròn */
+    .fixed-button {
+      position: fixed;
+      top: 30%;
+      left: 10px; 
+      transform: translateY(-50%); 
+      z-index: 1050;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px; 
+      padding: 15px;
+      background-color: #007bff; 
+      color: white; 
+      border: none; 
+      transition: all 0.3s ease, opacity 0.3s ease;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0.4
+    }
+
+    /* Hiệu ứng hover */
+    .fixed-button:hover {
+      background-color: #0056b3; 
+      opacity: 0.8; 
+      transform: translateY(-50%) translateX(10px);
+    }
+</style>
 </head>
 
 <body
@@ -29,15 +59,15 @@
 	<!-- END HEADER  -->
 	
 	<div class="container mt-5">
-		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-  			Advanced Search
+		<button type="button" class="btn btn-primary fixed-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" title="Tìm kiếm">
+  			<i class="bi bi-search"></i>
 		</button>
 		<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		  <div class="modal-dialog modal-lg">
 		    <div class="modal-content">
 		    <form action="/crm-web/customer-list-search-son" method="get">
 		      <div class="modal-header">
-		        <h1 class="modal-title fs-5" id="staticBackdropLabel">Tìm kiếm nâng cao</h1>
+		        <h1 class="modal-title fs-5" id="staticBackdropLabel">Tìm kiếm</h1>
 		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		      </div>
 		      <div class="modal-body w-100">
@@ -51,15 +81,12 @@
 					    <input type="text" class="form-control" id="std" name="phone">
 					</div>
 					<div class="mb-3 col-4">
-					    <label for="caree" class="form-label">Ngành nghề</label>
-					    <input type="text" class="form-control" id="caree" name="careers">
-					</div>
-		        </div>
-		        <div class="row">
-		        	<div class="mb-3 col-4">
 					    <label for="ngll" class="form-label">Người liên lạc</label>
 					    <input type="text" class="form-control" id="ngll" name="contactPerson">
 					</div>
+		        </div>
+		        <div class="row">
+		        	
 					<div class="mb-3 col-4">
 					    <label for="dc" class="form-label">Địa chỉ</label>
 					    <input type="text" class="form-control" id="dc" name="address">
@@ -68,7 +95,25 @@
 					    <label for="email" class="form-label">Email</label>
 					    <input type="email" class="form-control" id="dc" name="email">
 					</div>
+					
 		        </div>
+		        <div class="row">
+		        	<div>
+					    <label for="profession" class="form-label">Chọn ngành nghề</label>
+					    <div th:each="profession : ${professions}" class="form-check">
+					        <input 
+					            class="form-check-input" 
+					            type="checkbox" 
+					            th:value="${profession.id}" 
+					            th:id="${profession.id}" 
+					            name="selectedCareers">
+					        <label class="form-check-label" th:for="${profession.id}">
+					            <span th:text="${profession.name}"></span>
+					        </label>
+					    </div>
+					</div>
+		        </div>
+		        
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
