--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
@@ -86,10 +86,8 @@
 									<label for="note">Ghi Chú:</label>
 									<textarea class="form-control" id="note" name="note"></textarea>
 								</div>
-								<button type="submit" class="btn btn-primary">Lưu Khách
-									Hàng</button>
-								<button type="button" class="btn btn-secondary"
-									onclick="goBack()">Quay Lại</button>
+								<button type="button" class="btn btn-primary" onclick="saveNewCustomer()">Lưu Khách Hàng</button>
+								<button type="button" class="btn btn-secondary" onclick="goBack()">Quay Lại</button>
 							</form>
 						</div>
 						</div>
