--- a/web/src/main/webapp/WEB-INF/templates/addCustomer_v1.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer_v1.html
@@ -39,7 +39,7 @@
 	<!-- FILE JS BỔ SUNG -->
 	<script type="text/javascript" src="resources/app-assets/js/update/navigate.js"></script>
 
-	<script type="text/javascript">
+<!-- 	<script type="text/javascript">
 		function addCustomer() {
 			const createdAt = new Date().toISOString();
 			document.getElementById("addCustomerForm").created_at = createdAt;
@@ -48,6 +48,6 @@
 		function goBack() {
 	        window.location.href = '/crm-web/customer/list';
 	    }
-	</script>
+	</script> -->
 </body>
 </html>
