thêm * cho trường bắt buộc

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
@@ -88,7 +88,7 @@
 									<!-- <button type="submit" class="btn btn-primary"
 										onclick="addCustomer()">Lưu Khách Hàng</button> -->
 										
-									<button type="submit" class="btn btn-primary" id="addNewCustomerForm"
+									<button type="submit" class="btn btn-primary"
 										>Lưu Khách Hàng</button>
 
 									<button type="button" class="btn btn-secondary"
@@ -110,5 +110,6 @@
 	    }
 	  });
 	</script>
+	
 	<!-- END CONTENT -->
 
