Create OrderCategory on Handsontable successfully!

--- a/web/src/main/webapp/WEB-INF/templates/fragments/orders-configuration/frg_orders-configurationBao.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orders-configuration/frg_orders-configurationBao.html
@@ -1,5 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<form id="frmOrdersConfiguration" th:action="@{/ordersConfigurationCRMOrderType_Bao/load}" method="get">
+<span>ID sẽ tăng tự động khi một Loại đơn hàng được tạo mới. Vui lòng không nhập ID!</span>
+<form id="frmOrdersConfiguration" th:action="@{/ordersConfigurationCRMOrderType_Bao/save}" method="post">
 	<div id="tblOrderConfiguration"></div>
 	<button type="submit" class="btn btn-primary save-orders-configuration">Save</button>
 	<!-- Message: auto hide -->
