fix: - Layout: remove left margin - Add goBack() function for "Quay Lại" button - Set empty fields to null(instead of '') in add customer form

--- a/web/src/main/webapp/WEB-INF/templates/addCustomer_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer_v2.html
@@ -12,9 +12,9 @@
 
 <link rel="stylesheet" type="text/css" href="resources/css/add-customer-style.css">
 </head>
-
+<!-- vertical-layout vertical-compact-menu 2-columns menu-expanded  -->
 <body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
+	class="fixed-navbar"
 	data-open="click" data-menu="vertical-compact-menu"
 	data-col="2-columns">
 
