--- a/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
@@ -16,11 +16,11 @@
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/status.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
 </head>
-
+<!-- class="vertical-layout vertical-compact-menu menu-expanded fixed-navbar" Bỏ khoảng trống ở dòng bên trái, dòng này đặt ngay dưới "<body" -->
 <body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
+	class="fixed-navbar"
 	data-open="click" data-menu="vertical-compact-menu"
-	data-col="2-columns">
+	data-col="1-columns">
 
 	<!-- BEGIN HEADER  -->
 	
