--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
@@ -37,7 +37,7 @@
 
 								<div class="form-group">
 									<label for="address">Địa Chỉ:</label> <input type="text"
-										class="form-control" id="address" name="address">
+										class="form-control" id="address" name="address" required>
 								</div>
 
 								<div class="form-group">
@@ -86,8 +86,18 @@
 									<label for="note">Ghi Chú:</label>
 									<textarea class="form-control" id="note" name="note"></textarea>
 								</div>
-								<button type="button" class="btn btn-primary" onclick="saveNewCustomer()">Lưu Khách Hàng</button>
-								<button type="button" class="btn btn-secondary" onclick="goBack()">Quay Lại</button>
+<!-- 								<div class="button-container"> -->
+<!-- 									<button type="button" class="btn btn-secondary" -->
+<!-- 										onclick="goBack()">Quay Lại</button> -->
+<!-- 									<button type="button" class="btn btn-primary" -->
+<!-- 										onclick="saveNewCustomer()">Lưu Khách Hàng</button> -->
+<!-- 								</div> -->
+								<div class="d-flex justify-content-end mt-3">
+									<button type="button" class="btn btn-secondary mr-2"
+										onclick="goBack()">Quay Lại</button>
+									<button type="button" class="btn btn-primary"
+										onclick="saveNewCustomer()">Lưu Khách Hàng</button>
+								</div>
 							</form>
 						</div>
 						</div>
