--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -21,19 +21,7 @@
 <body>
     <th:block th:include="fragments/hmenu"></th:block>
 	<!-- Header Section -->
-	<header
-		class="text-center bg-success text-white py-5 card-header text-white">
-		<div class="container text-white">
-			<h1 class="display-4 fw-bold card-header text-white">CRM</h1>
-			<p class="lead text-white">Quản Lý & Chăm Sóc Khách Hàng Toàn
-				Diện</p>
-			<p>
-				Quản lý khép kín quy trình Trước - Trong - Sau bán hàng.<br>
-				Nền tảng CRM đầu tiên mở rộng tính năng đa nhiệm kiểm soát mọi hoạt
-				động của doanh nghiệp.
-			</p>
-		</div>
-	</header>
+ 	<th:block th:include="fragments/home/sidebar"></th:block>
 	<!-- Thumbnail Carousel Section -->
 	<section class="container my-5">
 		<div id="thumbnailCarousel" class="carousel slide"
