--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<!-- START COMMON META AND TITLE -->
-<th:block th:include="fragments/common_meta_title"></th:block>
-<!-- END COMMON META AND TITLE -->
+	<!-- START COMMON META AND TITLE -->
+	<th:block th:include="fragments/common_meta_title"></th:block>
+	<!-- END COMMON META AND TITLE -->
 
-<!-- START COMMON CSS -->
-<th:block th:include="fragments/common_css"></th:block>
-<!-- END COMMON CSS -->
+	<!-- START COMMON CSS -->
+	<th:block th:include="fragments/common_css"></th:block>
+	<!-- END COMMON CSS -->
 
-<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
-<link rel="stylesheet" type="text/css" href="resources/css/customerDetail.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/customerDetail.css">
 </head>
 
-<body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
-	data-open="click" data-menu="vertical-compact-menu"
-	data-col="2-columns">
+<body class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" data-open="click"
+	data-menu="vertical-compact-menu" data-col="2-columns">
 
 	<!-- BEGIN HEADER  -->
 	<th:block th:include="fragments/headerCRM"></th:block>
@@ -25,7 +24,7 @@
 	<!-- BEGIN LEFT MENU NAVIGATION -->
 	<th:block th:include="fragments/leftNavCRM"></th:block>
 	<!-- END LEFT MENU NAVIGATION -->
-	
+
 	<!--  BEGIN CONTENT -->
 	<div class="app-content content">
 		<div class="content-wrapper">
@@ -42,10 +41,8 @@
 					</div>
 				</div>
 				<div class="content-header-right col-md-6 col-12">
-					<fieldset
-						class="form-group relative has-icon-left col-md-5 col-12 float-right p-0">
-						<input class="form-control" id="iconLeft" type="text"
-							placeholder="Tìm kiếm khách hàng..." />
+					<fieldset class="form-group relative has-icon-left col-md-5 col-12 float-right p-0">
+						<input class="form-control" id="iconLeft" type="text" placeholder="Tìm kiếm khách hàng..." />
 						<div class="form-control-position">
 							<i class="fa fa-search"></i>
 						</div>
@@ -59,9 +56,7 @@
 				<div class="left-panel">
 					<div class="user-info">
 						<div class="user-avatar">
-							<img
-								src="resources/app-assets/images/portrait/small/avatar-s-10.png"
-								alt="User Avatar">
+							<img src="resources/app-assets/images/portrait/small/avatar-s-10.png" alt="User Avatar">
 						</div>
 						<div class="user-details">
 							<h2 th:text="${customer.companyName}"></h2>
@@ -115,8 +110,7 @@
 						<!--  Comment 1 -->
 						<div class="comment">
 							<div class="comment-avatar">
-								<img
-									src="resources/app-assets/images/portrait/small/avatar-s-10.png"
+								<img src="resources/app-assets/images/portrait/small/avatar-s-10.png"
 									alt="Comment Avatar">
 							</div>
 							<div class="comment-body">
@@ -129,8 +123,7 @@
 						<!-- Comment 2 -->
 						<div class="comment">
 							<div class="comment-avatar">
-								<img
-									src="resources/app-assets/images/portrait/small/avatar-s-11.png"
+								<img src="resources/app-assets/images/portrait/small/avatar-s-11.png"
 									alt="Comment Avatar">
 							</div>
 							<div class="comment-body">
@@ -163,7 +156,7 @@
 
 	<!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
 	<!-- FILE JS BỔ SUNG -->
-	<script type="text/javascript"
-		src="resources/app-assets/js/update/navigate.js"></script>
+	<script type="text/javascript" src="resources/app-assets/js/update/navigate.js"></script>
 </body>
+
 </html>
