--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
 </head>
+
 <body>
 	<div class="content-wrapper">
 		<div class="content-header row">
 			<div class="content-header-left col-md-6 col-12 mb-2">
-				 <h3 class="content-header-title">Quản lý đơn hàng</h3>
-				 <div class="row">
-				 	<div class="heading-elements" style="display: flex;">
-				 		<a th:href="@{/orders}">
-                        	<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i class="fas fa-box-open white"></i> Đơn hàng_Handsontable</button>
-            			</a>
-            			<a th:href="@{/orders-datatable}">
-                        	<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i class="fas fa-box-open white"></i> Đơn hàng_Datatable</button>
-            			</a>
-            			<!-- <button class="btn btn-primary btn-sm status" fdprocessedid="fzh15n"><i class="fas fa-clipboard-check white"></i> Trạng thái</button>
+				<h3 class="content-header-title">Quản lý đơn hàng</h3>
+				<div class="row">
+					<div class="heading-elements" style="display: flex;">
+						<a th:href="@{/orders}">
+							<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i
+									class="fas fa-box-open white"></i> Đơn hàng_Handsontable</button>
+						</a>
+						<a th:href="@{/orders-datatable}">
+							<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i
+									class="fas fa-box-open white"></i> Đơn hàng_Datatable</button>
+						</a>
+						<!-- <button class="btn btn-primary btn-sm status" fdprocessedid="fzh15n"><i class="fas fa-clipboard-check white"></i> Trạng thái</button>
             			<a th:href="@{/orders-configuration/orders}">
             				<button class="btn btn-primary btn-sm config" fdprocessedid="fzh15n"><i class="fas fa-cogs white"></i> Cấu hình</button>
             			</a> -->
-                	</div>	
-				 </div>
+					</div>
+				</div>
 			</div>
-			
+
 			<!-- <div class="content-header-left col-md-6 col-12 mb-2">
 				<div class="empty-div" style="height: 30px;"></div>
 				 <div class="row" style="text-align: right;">
@@ -36,4 +40,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
