--- a/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/buttonGroupFunction.html
@@ -29,7 +29,7 @@
 <div class="modal" tabindex="-1" role="dialog" id="confirmationModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header  text-bg-light">
         <h5 class="modal-title">Thông báo xác nhận</h5>
       </div>
       <div class="modal-body">
