Bổ sung thêm file js vô file orderConfigurationCRMScreen.html do lúc refractor bị thiếu.

--- a/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
@@ -76,6 +76,7 @@
 	<!-- FILE JS BỔ SUNG -->
 	<script type="text/javascript" th:src="@{/resources/js/orders-configuration/order-init.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/navigate.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/orders-configuration/orderCategory-save.js}"></script>
 	<!-- Screen Javascripts -->
 
 </body>
