--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -10,19 +10,19 @@
 	<th:block th:include="fragments/common_css"></th:block>
 	<!-- END COMMON CSS -->
 
-	<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
-	<link rel="stylesheet" type="text/css" href="resources/css/customerDetail.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/customerDetail.css}" />
 </head>
 
 <body class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" data-open="click"
 	data-menu="vertical-compact-menu" data-col="2-columns">
 
 	<!-- BEGIN HEADER  -->
-	<th:block th:include="fragments/headerCRM"></th:block>
+	<th:block th:include="fragments/hmenu"></th:block>
 	<!-- END HEADER  -->
 
 	<!-- BEGIN LEFT MENU NAVIGATION -->
-	<th:block th:include="fragments/leftNavCRM"></th:block>
+	<!-- <th:block th:include="fragments/leftNavCRM"></th:block> -->
 	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
@@ -56,7 +56,7 @@
 				<div class="left-panel">
 					<div class="user-info">
 						<div class="user-avatar">
-							<img src="resources/app-assets/images/portrait/small/avatar-s-10.png" alt="User Avatar">
+							<img th:src="@{/resources/app-assets/images/portrait/small/avatar-s-10.png}" alt="User Avatar">
 						</div>
 						<div class="user-details">
 							<h2 th:text="${customer.companyName}"></h2>
@@ -83,8 +83,12 @@
 					<div class="person-in-charge">
 						<label class="label-bold" for="person-in-charge">Người phụ
 							trách:</label> <select id="person-in-charge">
-							<option value="ngan">Nguyễn Hoàng Phương Ngân</option>
-							<option value="other">Khác</option>
+							<option value="">Chọn Người Phụ Trách</option>
+							<th:block th:each="person : ${responsiblePersons}">
+								<option th:value="${person.id}" th:text="${person.name}"
+									th:selected="${person.id == customer.responsiblePerson.id}">
+								</option>
+							</th:block>
 						</select>
 					</div>
 
@@ -110,7 +114,8 @@
 						<!--  Comment 1 -->
 						<div class="comment">
 							<div class="comment-avatar">
-								<img src="resources/app-assets/images/portrait/small/avatar-s-10.png"
+								<img
+									th:src="@{/resources/app-assets/images/portrait/small/avatar-s-10.png}"
 									alt="Comment Avatar">
 							</div>
 							<div class="comment-body">
@@ -123,8 +128,10 @@
 						<!-- Comment 2 -->
 						<div class="comment">
 							<div class="comment-avatar">
-								<img src="resources/app-assets/images/portrait/small/avatar-s-11.png"
+								<img
+									th:src="@{/resources/app-assets/images/portrait/small/avatar-s-11.png}"
 									alt="Comment Avatar">
+
 							</div>
 							<div class="comment-body">
 								<div class="comment-header">Nguyễn Hoàng Phương Ngân</div>
