--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -4,8 +4,8 @@
 <th:block th:include="fragments/common_meta_title"></th:block>
 <th:block th:include="fragments/head"></th:block>
 <th:block th:include="fragments/common_css"></th:block>
-
-<link rel="stylesheet" type="text/css" href="resources/css/customerInteraction.css">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
 </head>
 <body
 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
@@ -18,36 +18,37 @@
 
 	<!-- BEGIN CONTENT -->
 	<div class="container mt-4">
-		<div class="interact-day-group d-flex flex-row mb-3">
-			<label for="interaction-time" class="mr-4">Tương tác mới nhất
+		<div class="interact-day-group d-flex flex-row mb-3 w-50">
+			<label for="interaction-time" class="mr-4 w-25">Tương tác mới nhất
 				cách đây</label> <select class="form-select"
 				aria-label="Default select example">
-				<option selected>Open this select menu</option>
+				<option selected>Chọn thời gian</option>
 				<option value="1">1 tuần</option>
 				<option value="2">2 tuần</option>
 				<option value="3">3 tuần</option>
 			</select>
 		</div>
 
-		<div class="search-bar d-flex justify-content-end">
+		<!-- <div class="search-bar d-flex justify-content-end">
 			<input type="text" id="search-input"
-				class="form-control d-flex w-25 justify-content-end" placeholder="Tìm kiếm">
-		</div>
+				class="form-control d-flex w-25 justify-content-end"
+				placeholder="Tìm kiếm">
+		</div> -->
 
 		<div class="table-container">
 			<div class="table-responsive">
-				<table id="table" class="table table-bordered">
+				<table id="table" class="table table-bordered table-striped table-hover">
 					<thead class="thead">
-						<tr class="bg">
-							<th class="col-stt th1" >STT</th>
-							<th class="col-name th2" >Tên khách hàng</th>
-							<th class="col-email th3" >Email</th>
-							<th class="col-phone th4" >Số điện thoại</th>
-							<th class="col-contact th5" >Người liên hệ chính</th>
-							<th class="col-action th6" >Hành động</th>
+						<tr class="bg bg-success">
+							<th class="col-stt th1">STT</th>
+							<th class="col-name th2">Tên khách hàng</th>
+							<th class="col-email th3">Email</th>
+							<th class="col-phone th4">Số điện thoại</th>
+							<th class="col-contact th5">Người liên hệ chính</th>
+							<th class="col-action th6">Hành động</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody class="bg-transparent">
 						<tr th:each="customer, iterStat : ${customers}">
 							<td th:text="${iterStat.index + 1}"></td>
 							<td
@@ -57,14 +58,10 @@
 							<td
 								th:text="${customer.contactPerson != null ? customer.contactPerson : ''}"></td>
 							<td>
-								<div class="dropdown">
-									<button class="btn btn-secondary dropdown-toggle" type="button"
-										id="dropdownMenuButton" data-toggle="dropdown"
-										 aria-expanded="false">Action</button>
-									<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-										<a class="dropdown-item" th:href="@{/customer/edit(id=${customer.id})}">Cập nhật</a> 
-										<a class="dropdown-item" href="#">Xóa</a> 
-									</div>
+								<div class="d-flex justify-content-center"> 
+									<a th:href="@{/customer/edit(id=${customer.id})}" class="text-info mr-3 bg-transparent" style="font-size: 20px;">
+										<i class="fas fa-edit w-100"></i>
+									</a>
 								</div>
 							</td>
 						</tr>
@@ -80,7 +77,14 @@
 	<!-- END CUSTOMIZE BUTTON -->
 
 </body>
+<script>new DataTable('#table');</script>
 <!-- START COMMON JAVASCRIPT -->
 <th:block th:include="fragments/common_javascript"></th:block>
 <!-- END COMMON JAVASCRIPT -->
+<script type="text/javascript"
+	th:src="@{/resources/app-assets/js/update/customerList_JS.js}"></script>
+<script type="text/javascript"
+	th:src="@{/resources/app-assets/js/update/customerList_Pagination.js}"></script>
+<script type="text/javascript"
+	th:src="@{/resources/app-assets/js/update/toggleCheckboxActions.js}"></script>
 </html>
