--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -66,7 +66,9 @@
 					</div>
 
 					<div class="actions">
-						<button>Edit</button>
+						<button>
+						    <a th:href="@{editCustomer(id=${customer.id})}">Edit</a>
+						</button>
 						<button>Delete</button>
 					</div>
 
