hoàn thiện chức năng search nhiều trường khác nhau

--- a/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_son.html
@@ -35,8 +35,6 @@
       border: none; 
       transition: all 0.3s ease, opacity 0.3s ease;
       display: flex;
-      justify-content: center;
-      align-items: center;
       opacity: 0.4
     }
 
@@ -59,7 +57,7 @@
 	<!-- END HEADER  -->
 	
 	<div class="container mt-5">
-		<button type="button" class="btn btn-primary fixed-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" title="Tìm kiếm">
+		<button type="button" class="btn btn-primary fixed-button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" title="Tìm kiếm" style="border-radius: 50%; justify-content: center; align-items: center;">
   			<i class="bi bi-search"></i>
 		</button>
 		<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
