--- a/web/src/main/webapp/WEB-INF/templates/addCustomer_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer_v2.html
@@ -9,6 +9,7 @@
 <!-- START COMMON CSS -->
 <th:block th:include="fragments/common_css"></th:block>
 <!-- END COMMON CSS -->
+<th:block th:include="fragments/head"></th:block>
 
 <link rel="stylesheet" type="text/css" href="resources/css/add-customer-style.css">
 </head>
