--- a/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
@@ -11,7 +11,7 @@
 <!-- START COMMON CSS -->
 <th:block th:include="fragments/common_css"></th:block>
 <!-- END COMMON CSS -->
-
+<th:block th:include="fragments/head"></th:block>
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/status.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
